--- a/src/component/wheelcss.css
+++ b/src/component/wheelcss.css
@@ -1,51 +1,88 @@
-body{
-    background-color: rebeccapurple;
+body {
+  background-color: rebeccapurple;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* wheelcss.css */
 .wheel-container {
-    position: relative;
-    width: 80vh;
-    height: 80vh;
-    border: 2px dashed yellow;
-  }
-  
-  .wheel-svg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 2; /* Ensure it is behind other content */
-  }
-  
-  /* wheelcss.css */
-@keyframes blink {
-    0% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
-  .wheel-container #Group\ 62 {
-    animation: blink 1s infinite;
-  }
-  
+  position: relative;
+  width: 70vh;
+  height: 70vh;
+  /* border: 2px dashed yellow; */
+}
 
-.centergif{
-justify-content: center;
+.complatewheel{
+  height: 90vh;
+  /* border: 2px dashed yellow; */
+}
+
+.stand{
+  background: url(stand.svg) no-repeat; 
+  background-size:contain;
+  /* border: 3px dashed rgb(255, 16, 16);  */
+  position: absolute;
+  /* background: lightgreen; */
+  width: 40%;
+  height: 50%;
+  text-align: center;
+  bottom:20%;
+  z-index: -1;
+}
+
+.wheel-svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  /* Ensure it is behind other content */
+}
+
+/* wheelcss.css */
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.wheel-container #Group\ 62 {
+  animation: blink 1s infinite;
+}
+
+
+.sunimg {
+  justify-content: center;
   align-items: center;
   position: absolute;
-border: 1px solid purple;
-border-radius: 50%;
-top: 40%;
+  /* border: 1px solid purple; */
+  border-radius: 50%;
+  top: 40%;
   left: 40%;
   width: 50%;
   height: 50%;
+  margin: -15%;
+}
+
+.gif {
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  border: 1px solid purple;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  width: 30%;
+  height: 30%;
   margin: -15%;
 }
